# foodie

./: .gitignore  .worker.toml  README.md  deploy  run
.aws/: init.sh
.docker/: Caddyfile  docker-compose-prod.yml  docker-compose.yml
.github/actions/: setup_rust.yml
.github/actions/setup_rust/: action.yml
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/.docker/: Dockerfile  Dockerfile.prod
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_users_table.rs  m20231216_004843_create_recipes_table.rs  m20231216_103342_create_unit_type.rs  m20231216_103916_create_ingredients_table.rs  m20231216_104607_create_recipe_ingredients_table.rs  m20240218_134359_instructions_as_vec.rs  m20240331_125419_image_to_uuid_column.rs
backend/migrations/: 1_users.sql  2_recipes.sql
backend/src/: app.rs  auth_backend.rs  auth_middleware.rs  db.rs  lib.rs  main.rs
backend/src/api/: Cargo.toml  auth.rs  ingredient.rs  mod.rs  oauth.rs  recipe.rs  user.rs
backend/src/api/src/: app.rs  aws.rs  lib.rs  main.rs  oauth.rs
backend/src/api/src/routes/: auth.rs  ingredient.rs  mod.rs  recipe.rs
backend/src/api/src/services/: aws.rs
backend/src/api/tests/: recipe.rs
backend/src/api/tests/api/: main.rs  recipe.rs
backend/src/db/: Cargo.toml  mod.rs  models.rs
backend/src/db/migrations/: 1_users.sql  2_recipes.sql  3_rls.sql
backend/src/db/queries/: ingredient.rs  recipe.rs  user.rs
backend/src/db/src/: lib.rs  models.rs
backend/src/db/src/models/: user.rs
backend/src/db/src/queries/: ingredient.rs  recipe.rs  user.rs
backend/src/entities/: ingredients.rs  mod.rs  prelude.rs  recipe_ingredients.rs  recipes.rs  sea_orm_active_enums.rs  users.rs
backend/src/routes/: auth.rs  ingredient.rs  mod.rs  recipe.rs
backend/src/services/: auth.rs  mod.rs  recipe.rs  user.rs
backend/src/storage/: aws.rs  mod.rs
backend/tests/api/: ingredient.rs  main.rs  recipe.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/models/: ingredient.rs  mod.rs  recipe.rs  user.rs
form_derive/: Cargo.toml
form_derive/form_derive_impl/: Cargo.toml
form_derive/form_derive_impl/src/: lib.rs
form_derive/form_derive_trait/: Cargo.toml
form_derive/form_derive_trait/src/: lib.rs
form_derive/src/: lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html  input.css  package-lock.json  package.json  tailwind.config.js
frontend/.docker/: Dockerfile  Dockerfile.prod
frontend/src/: main.rs  request.rs
frontend/src/components/: button.rs  create_recipe.rs  custom_route.rs  dropdown.rs  input.rs  loading.rs  menu.rs  mod.rs  modal.rs  navbar.rs  not_found.rs  stepper.rs  textarea.rs
frontend/src/components/form/: form.rs  form_field.rs  form_group.rs  mod.rs
frontend/src/components/form/form_fields/: form_field_checkbox.rs  form_field_duration.rs  form_field_input.rs  form_field_list.rs  form_field_select.rs  form_field_textarea.rs  mod.rs
frontend/src/components/icons/: chevron_down.rs  chevron_up.rs  clock_icon.rs  close_icon.rs  error_icon.rs  file_upload_icon.rs  minus_icon.rs  mod.rs  modify_icon.rs  more_vertical_icon.rs  plus_icon.rs  shopping_cart_icon.rs  success_icon.rs  warning_icon.rs
frontend/src/components/login/: google.rs
frontend/src/components/recipes/: ingredient_list.rs  mod.rs  recipe_card.rs
frontend/src/components/recipes/new_recipe/: create_recipe.rs  ingredient_list.rs  mod.rs
frontend/src/components/toast/: mod.rs  toaster.rs  toastviewer.rs
frontend/src/context/: auth.rs  mod.rs  toast.rs
frontend/src/pages/: home.rs  login.rs  mod.rs  new_recipe.rs  recipe.rs  recipes.rs
frontend/src/utils/: class_extender.rs  mod.rs
frontend/src/views/: home.rs  mod.rs  profile.rs
frontend/src/views/auth/: google_oauth.rs  login_page.rs  mod.rs
frontend/src/views/recipe/: create_recipe.rs  edit_recipe.rs  mod.rs  recipe.rs  recipe_card.rs  recipe_image.rs  recipes.rs
frontend/src/views/recipe/new_recipe/: create_recipe.rs  mod.rs  recipe_info.rs  recipe_ingredients.rs  recipe_steps.rs
frontend/src/views/recipe/recipe_form/: mod.rs  recipe_steps.rs
frontend/style/: output.css
http/: get_me.http  hitman.toml  logout.http
http/auth/: create_user.http  login.http
http/ingredient/: create_ingredient.http  get_ingredients.http  get_ingredients.http.toml
http/recipe/: create_recipe.http  get_recipe.http  get_recipes.http
