[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
common = { path = "../common", features = ["backend"] }
serde = { version = "1.0.152", features = ["serde_derive", "derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.7.1", features = ["postgres", "json",
    "runtime-tokio-rustls", "uuid", "chrono", "rust_decimal"] }
anyhow = "1.0.68"
axum-login = { git = "https://github.com/maxcountryman/axum-login.git", features = ["postgres"] }
rust_decimal = "1.31.0"
chrono = { version = "0.4.26", features = ["serde"] }
tokio = { version = "1.24.1", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.17"
futures-util = "0.3.25"
sha2 = "0.10.6"
axum = "0.6.17"
rust-argon2 = "2.0.0"
rand = { version = "0.8.5", features = ["min_const_gen"] }
uuid = { version = "1.3.2", features = ["serde", "v4"] }
aws-sdk-s3 = "0.34.0"
aws-config = "0.56.1"
tower-http = { version = "0.4.0", features = ["cors"] }
dotenv = "0.15.0"
oauth2 = "4.4.1"
reqwest = { version = "0.11.20", features = ["serde_json", "json", "cookies"] }
hyper = "0.14.27"
itertools = "0.11.0"
tower = "0.4.13"
ring = "0.17.5"
async-session = "3.0.0"
async-trait = "0.1.74"
async-stream = "0.3.5"
sqlx-core = { version = "0.7.2" }
futures-core = "0.3.29"
either = "1.9.0"
