[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
common = { path = "../common", features = ["backend"] }
serde = { version = "1.0.152", features = ["serde_derive", "derive"] }
serde_json = "1.0.91"
anyhow = "1.0.68"
axum-login = { version = "0.15.3" }
rust_decimal = "1.31.0"
chrono = { version = "0.4.26", features = ["serde"] }
tokio = { version = "1.24.1", features = ["full"] }
env_logger = "0.11.0"
log = "0.4.17"
futures-util = "0.3.25"
axum = "0.7.2"
argon2 = "0.5.2"
rand = { version = "0.8.5", features = ["min_const_gen"] }
aws-sdk-s3 = "1.15.0"
aws-config = "1.1.1"
tower-http = { version = "0.5.0", features = ["cors", "catch-panic"] }
dotenv = "0.15.0"
oauth2 = "4.4.1"
reqwest = { version = "0.12.5", features = ["json", "cookies"] }
hyper = "1.0.1"
itertools = "0.13.0"
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
async-trait = "0.1.74"
tower = "0.5.0"
bytes = "1.5.0"
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
sqlx = "0.7.3"
sea-orm-migration = "1.0.1"
migration = { path = "migration" }
