[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
backend = ["dep:sqlx", "dep:axum-login"]

[dependencies]
serde = { version = "1.0.152", features = ["serde_derive", "derive"] }
serde_json = "1.0.91"
uuid = { version = "1.4.0", features = ["serde"] }
sqlx = { version = "0.6.3", features = ["postgres", "json",
    "runtime-tokio-rustls", "uuid"], optional = true }
axum-login = { version = "0.5.0", features = ["postgres"], optional = true }
