[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
backend = ["dep:sqlx", "dep:axum-login"]

[dependencies]
serde = { version = "1.0.152", features = ["serde_derive", "derive"] }
serde_json = "1.0.91"
uuid = { version = "1.4.0", features = ["serde"] }
sqlx = { version = "0.7.1", features = ["postgres", "json", "runtime-tokio-rustls", "uuid"], optional = true }
axum-login = { git = "https://github.com/maxcountryman/axum-login.git", features = ["postgres"], optional = true }
rust_decimal = { version = "1.31.0" }
chrono = { version = "0.4.26", features = ["serde"] }
