[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
backend = ["dep:axum-login"]

[dependencies]
serde = { version = "1.0.152", features = ["serde_derive", "derive"] }
serde_json = "1.0.91"
axum-login = { version = "0.13.0", optional = true }
rust_decimal = { version = "1.31.0" }
chrono = { version = "0.4.26", features = ["serde"] }
strum = { version = "0.26.1", features = ["derive"] }
