[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
leptos = "0.2.5"
leptos_router = { version = "0.2.5", features = ["csr"] }
reqwasm = "0.5.0"
serde = { version = "1.0.160", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.96"
uuid = { version = "1.3.2", features = ["serde"] }
web-sys = { version = "0.3.61", features = ["Event"] }
