[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common"}
anyhow = "1.0.71"
leptos = { version = "0.5.0-beta", features = ["nightly"] }
leptos_router = { version = "0.5.0-beta", features = ["csr"] }
reqwasm = "0.5.0"
serde = { version = "1.0.160", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
serde_json = "1.0.96"
web-sys = { version = "0.3.61", features = ["Event"] }
