[package]
name = "form_derive_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
form_derive_trait = { path = "../form_derive_trait" }
paste = "1.0.14"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full", "parsing"] }
