[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
db = { path = "../db" }

common = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
axum-login = { workspace = true }
tokio = { version = "1.24.1", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.17"
futures-util = "0.3.25"
sha2 = "0.10.6"
axum = "0.6.17"
rust-argon2 = "1.0.0"
rand = { version = "0.8.5", features = ["min_const_gen"] }
uuid = { version = "1.3.2", features = ["serde"] }
aws-sdk-s3 = "0.28.0"
aws-config = "0.55.1"
tower-http = { version = "0.4.0", features = ["cors"] }
dotenv = "0.15.0"
oauth2 = "4.4.1"
reqwest = { version = "0.11.18", features = ["serde_json", "json"] }
hyper = "0.14.27"
