[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
axum-login = { workspace = true }
common = { workspace = true }
chrono = { workspace = true }
itertools = "0.11.0"
